# task_block_declaprog

./: README.md  pyproject.toml
block_declaprog/scripts/: task1_func_proc.py  task2_list_comprehensions.py  task3_number_unique_letters.py  task4_genexp.py  task5_genfunc.py
