[tool.poetry]
name = "block_declaprog"
version = "0.1.0"
description = "практические задания из блока курса про декларативное программирование"
authors = ["alexandertarakanov <alex.artoff@gmail.com>"]
packages = [{include = "block_declaprog"},]

[tool.poetry.scripts]
t1-fp = "block_declaprog.scripts.task1_func_proc:main"
t2-lc = "block_declaprog.scripts.task2_list_comprehensions:main"
t3-nul = "block_declaprog.scripts.task3_number_unique_letters:main"
t4-genexp = "block_declaprog.scripts.task4_genexp:main"
t5-genfunc = "block_declaprog.scripts.task5_genfunc:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
